--- a/src/main/resources/static/css/book.css
+++ b/src/main/resources/static/css/book.css
@@ -1,180 +1,190 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap");
 
 body {
-  background: #92d050;
-  position: relative;
+	background: #92d050;
+	position: relative;
 }
 
-.parent{
+.parent {
 	min-height: 800px;
 }
+
 .title-custom {
-  justify-content: center;
-  flex-shrink: 0;
-  color: rgba(0, 0, 0, 0.97);
-  text-align: center;
-  font-family: Inter;
-  font-size: 22px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
+	justify-content: center;
+	flex-shrink: 0;
+	color: rgba(0, 0, 0, 0.97);
+	text-align: center;
+	font-family: Inter;
+	font-size: 22px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
 }
+
 .form-control-custom {
-  padding: 10px;
-  background-color: rgba(19, 130, 19, 0.3);
-  width: 160px;
-  height: 45px;
-  line-height: 35px;
-  color: #fff;
-  font-family: Inter;
-  font-size: 15px;
-  font-style: normal;
-  font-weight: bold;
-  line-spacing: 1.75rem;
-  border: 0;
+	padding: 10px;
+	background-color: rgba(19, 130, 19, 0.3);
+	width: 160px;
+	height: 45px;
+	line-height: 35px;
+	color: #fff;
+	font-family: Inter;
+	font-size: 15px;
+	font-style: normal;
+	font-weight: bold;
+	line-spacing: 1.75rem;
+	border: 0;
 }
 
 select {
-  padding: 10px;
-  background-color: rgba(19, 130, 19, 0.3);
-  font-family: Inter;
-  font-size: 15px;
-  font-style: normal;
-  font-weight: bold;
-  width: 160px;
-  height: 45px;
-  color: #fff;
-  line-spacing: 1.75rem;
-  border: 0;
+	padding: 10px;
+	background-color: rgba(19, 130, 19, 0.3);
+	font-family: Inter;
+	font-size: 15px;
+	font-style: normal;
+	font-weight: bold;
+	width: 160px;
+	height: 45px;
+	color: #fff;
+	line-spacing: 1.75rem;
+	border: 0;
 }
 
 .upload-btn-wrapper {
-  position: relative;
-  overflow: hidden;
-  display: inline-block;
+	position: relative;
+	overflow: hidden;
+	display: inline-block;
 }
 
-.btn-u{
-  border: 0;
-  border-radius: 0px;
-  background-color: rgba(19, 130, 19, 0.3);
-  width: 300px;
-  height: 45px;
-  line-height: 35px;
-  color: #fff;
-  font-size: 15px;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: bold;
-  line-spacing: 1.75rem;
+.btn-u {
+	border: 0;
+	border-radius: 0px;
+	background-color: rgba(19, 130, 19, 0.3);
+	width: 300px;
+	height: 45px;
+	line-height: 35px;
+	color: #fff;
+	font-size: 15px;
+	font-family: Inter;
+	font-style: normal;
+	font-weight: bold;
+	line-spacing: 1.75rem;
 }
 
 .upload-btn-wrapper input[type="file"] {
-  position: absolute;
-  left: 0;
-  top: 0;
-  opacity: 0;
+	position: absolute;
+	left: 0;
+	top: 0;
+	opacity: 0;
 }
 
 .input-custom {
-  background-color: rgba(19, 130, 19, 0.3);
-  width: 300px;
-  height: 45px;
-  line-height: 35px;
-  color: #fff;
-  border: 0;
+	background-color: rgba(19, 130, 19, 0.3);
+	width: 300px;
+	height: 45px;
+	line-height: 35px;
+	color: #fff;
+	border: 0;
 }
+
 input:focus {
-  outline: none;
+	outline: none;
 }
+
 .add-button {
-  flex-shrink: 0;
-  width: 220px;
-  background: #035114;
-  height: 40px;
-  border: 0;
-  outline: none;
-  color: #fff;
-  text-align: center;
-  font-family: Inter;
-  font-size: 15px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  position: relative;
-  left: 35px;
-  top: 10px;
+	flex-shrink: 0;
+	width: 220px;
+	background: #035114;
+	height: 40px;
+	text-decoration: none;
+	border: 0;
+	outline: none;
+	color: #fff;
+	text-align: center;
+	font-family: Inter;
+	font-size: 15px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+	position: relative;
+	left: 35px;
+	top: 10px;
 }
+
 .img-custom {
-  width: 350px;
-  height: 350px;
-  flex-shrink: 0;
+	width: 350px;
+	height: 350px;
+	flex-shrink: 0;
 }
 
 .cancel-button {
-  width: 200px;
-  background-color: #035114;
-  height: 45px;
-  font-family: Inter;
-  font-size: 15px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  border: 0;
-  outline: none;
-  color: #fff;
-  position: relative;
-  left: 80px;
-  top: 10px;
+	width: 200px;
+	background-color: #035114;
+	height: 45px;
+	font-family: Inter;
+	font-size: 15px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+	border: 0;
+	outline: none;
+	color: #fff;
+	position: relative;
+	left: 80px;
+	top: 10px;
 }
 
 .fa {
-  font-family: "Lato", "Font Awesome 5 Free", "Font Awesome 5 Brands";
-  font-weight: 900;
-  background-image: url("/img/chevron-down.svg");
-  padding: 1rem 2rem;
-  color: #3a9c7d;
+	font-family: "Lato", "Font Awesome 5 Free", "Font Awesome 5 Brands";
+	font-weight: 900;
+	background-image: url("/img/chevron-down.svg");
+	padding: 1rem 2rem;
+	color: #3a9c7d;
 }
 
 /*To add*/
 
 .table-custom {
-  margin-top: 10px;
-  position: relative;
-  top: 20px;
+	margin-top: 10px;
+	position: relative;
+	top: 20px;
 }
+
 .update-button {
-  flex-shrink: 0;
-  width: 200px;
-  background: #035114;
-  height: 45px;
-  border: 0;
-  outline: none;
-  color: #fff;
-  text-align: center;
-  font-family: Inter;
-  font-size: 15px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  position: relative;
-  top: 10px;
+	flex-shrink: 0;
+	width: 200px;
+	background: #035114;
+	height: 45px;
+	border: 0;
+	outline: none;
+	color: #fff;
+	text-align: center;
+	font-family: Inter;
+	font-size: 15px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+	position: relative;
+	top: 10px;
 }
+
 .add-category-button {
-  flex-shrink: 0;
-  width: 220px;
-  background: #035114;
-  height: 40px;
-  border: 0;
-  outline: none;
-  color: #fff;
-  text-align: center;
-  font-family: Inter;
-  font-size: 15px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  position: relative;
-  top: 60px;
-  left: 25px;
+	text-decoration: none;
+	text-align: center;
+	flex-shrink: 0;
+	width: 220px;
+	background: #035114;
+	height: 40px;
+	border: 0;
+	outline: none;
+	color: #fff;
+	text-align: center;
+	font-family: Inter;
+	font-size: 15px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+	position: relative;
+	top: 60px;
+	left: 25px;
 }
