--- a/src/main/resources/static/css/register.css
+++ b/src/main/resources/static/css/register.css
@@ -122,6 +122,7 @@ body {
 	color: #000;
 	border: none;
 	border-radius: var(--border-radius);
+	text-decoration: none;
 	outline: none;
 	cursor: pointer;
 	background: var(--color-primary);
