--- a/src/main/resources/templates/addBookCategory.html
+++ b/src/main/resources/templates/addBookCategory.html
@@ -12,8 +12,12 @@
 </head>
 
 <body>
-	<nav th:replace="fragments/nav :: header">
-	</nav>
+	<div class="text-success">
+		<h2>[[${message}]]</h2>
+	</div>
+	<div class="text-danger">
+		<h2>[[${error}]]</h2>
+	</div>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-2"></div>
@@ -51,21 +55,20 @@
 								<td>
 									<div><input type="text" class="input-custom px-4" th:field="*{categoryName}" />
 									</div>
-									<p class="alert alert-warning" th:if="${#fields.hasErrors('categoryName')}"
-										th:errors="*{categoryName}"></p>
 								</td>
+								<p class="alert alert-warning" th:if="${#fields.hasErrors('categoryName')}"
+										th:errors="*{categoryName}"></p>
 							</tr>
 						</tbody>
 					</table>
 					<div class="d-flex justify-content-center">
-						<input class="add-category-button mt-3" type="submit" value="Add Book Category" />
+						<input class="add-category-button mt-3 mx-4" type="submit" value="Add Book Category" />
+						<a class="add-category-button mt-3 pt-2" th:href="@{/}">Cancel</a>
 					</div>
 				</form>
 			</div>
 		</div>
 	</div>
-	<footer th:replace="fragments/footer :: footer">
-	</footer>
 	<script th:src="@{js/bootstrap.bundle.min.js}"></script>
 	<script th:src="@{js/popper.min.js}"></script>
 	<script th:src="@{js/bootstrap.min.js}"></script>
