--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -33,7 +33,10 @@
 					<input class="form__button mt-5" type="submit" value="Login" id="loginButton" />
 					<div class="padding"></div>
 					<div class="padding"></div>
-					<a class="form__button" th:href="@{/}">Go Home</a>
+					<div class="go_home">
+						<a  th:href="@{/}">Go Home</a>
+					</div>
+					
 				</div>
 			</form>
 		</div>
