--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -134,7 +134,26 @@ body {
 	font-weight: bold;
 	line-height: normal;
 }
-
+.go_home{
+	border: none;
+	border-radius: var(--border-radius);
+	outline: none;
+	cursor: pointer;
+	background: var(--color-primary);
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	line-height: 50px;
+}
+.go_home a{
+	text-decoration: none;
+	text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+	font-family: Inter;
+	font-size: 16px;
+	font-style: normal;
+	font-weight: bold;
+	line-height: normal;
+}
 .form__button:active {
 	transform: scale(0.98);
 }
