--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -48,7 +48,9 @@
 					<input class="form__button a mt-5" type="submit" value="Register" id="registerButton" />
 
 					<div class="padding"></div>
-					<a class="form__button" th:href="@{/}" id="loginButton" >Go Home</a>
+					<div class="go_home">
+						<a  th:href="@{/}">Go Home</a>
+					</div>
 				</div>
 			</form>
 		</div>
