--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -146,6 +146,7 @@ body {
 	line-height: 50px;
 }
 .go_home a{
+	color: #000;
 	text-decoration: none;
 	text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	font-family: Inter;
