--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
 	<meta charset="UTF-8" />
@@ -12,6 +12,7 @@
 
 <body>
 	<nav th:fragment="header">
+		<!--<div th:text="${#authentication.principal.username}"></div>!-->
 		<div class="row justify-content-between align-items-center nav-bg">
 			<!--Logo Section!-->
 			<div class="col-md-4">
