--- a/src/main/resources/templates/addBook.html
+++ b/src/main/resources/templates/addBook.html
@@ -156,7 +156,7 @@
 								<td>
 									<div id="pdfinput" style="display: none;" class="upload-btn-wrapper mt-2">
 										<button class="btn-u">Upload File...</button>
-										<input type="file" name="pdf" id="fileUpload" accept="application/pdf" required/>
+										<input type="file" name="pdf" id="fileUpload" accept="application/pdf"/>
 									</div>
 								</td>
 								<!--Here-->
