--- a/src/main/resources/templates/updateBook.html
+++ b/src/main/resources/templates/updateBook.html
@@ -114,15 +114,15 @@
 								</td>
 								<!--Here-->
 							</tr>
-							<tr>
+							<tr th:if="*{bookType}==ebook">
 								<td>
-									<div id="pdflable" style="display: none;"
+									<div id="pdflable" 
 										class="form-control-custom m-3 text-center">
 										Pdf
 									</div>
 								</td>
 								<td>
-									<div id="pdfinput" style="display: none;" class="upload-btn-wrapper mt-2">
+									<div id="pdfinput"  class="upload-btn-wrapper mt-2">
 										<button class="btn">Upload File...</button>
 										<input type="file" name="pdf" id="fileUpload" accept="application/pdf" />
 									</div>
