--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,10 +14,10 @@
 			<h2 class="form__title">Login</h2>
 			<!--Error Message!-->
 			<div th:if="${param.error}">
-				<div class="alert alert-danger">Invalid Username or Password</div>
+				<div class="danger">Invalid Username or Password!</div>
 			</div>
 			<div th:if="${param.logout}">
-				<div class="alert alert-success">You have been logged out.</div>
+				<div class="success">You have been logged out!</div>
 			</div>
 			<form th:action="@{/login}" method="post">
 				<div class="form__input-group">
