--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>LBMS Register</title>
+	<title>Library Register</title>
 	<link rel="stylesheet" th:href="@{css/register.css}" />
 </head>
 
@@ -13,7 +13,7 @@
 		<div class="form" id="login">
 			<h2 class="form__title">Register</h2>
 			<div th:if="${param.success}">
-				<div class="alert alert-info">
+				<div class="reg">
 					Registration successful !!!
 				</div>
 			</div>
@@ -22,34 +22,38 @@
 				<div class="form__input-group">
 					<input type="text" class="form__input" autofocus placeholder="Enter username" id="usernameInput"
 						name="username" th:field="*{name}" />
-					<p class="text-danger" th:errors="*{name}" th:if="${#fields.hasErrors('name')}"></p>
-					<div class="padding"></div>
+					<div class="padding"><span class="text-danger" th:errors="*{name}"
+							th:if="${#fields.hasErrors('name')}"></span></div>
 				</div>
 
+
 				<div class="form__input-group">
-					<input type="email" class="form__input" autofocus placeholder="Enter email" id="emailInput"
+					<input type="text" class="form__input" autofocus placeholder="Enter email" id="emailInput"
 						name="email" th:field="*{email}" />
-					<p class="text-danger" th:errors="*{email}" th:if="${#fields.hasErrors('email')}"></p>
-					<div class="padding"></div>
+					<div class="padding"><span class="text-danger" th:errors="*{email}"
+							th:if="${#fields.hasErrors('email')}"></span></div>
+					<div class="padding" th:if="${email_custom}">
+						<span class="text-danger" th:text="${email_custom}"></span>
+					</div>
 				</div>
 
 				<div class="form__input-group">
 					<input type="password" class="form__input" autofocus placeholder="Enter password" id="passwordInput"
 						name="password" th:field="*{password}" />
-					<p class="text-danger" th:errors="*{password}" th:if="${#fields.hasErrors('password')}"></p>
-					<div class="padding"></div>
+					<div class="padding"><span class="text-danger" th:errors="*{password}"
+							th:if="${#fields.hasErrors('password')}"></span></div>
 				</div>
 
 				<div class="form__input-group">
 					<input type="tel" class="form__input" autofocus placeholder="Enter phone no" id="phoneInput"
 						name="phone" th:field="*{phoneNo}" />
-					<p class="text-danger" th:errors="*{phoneNo}" th:if="${#fields.hasErrors('phoneNo')}"></p>
-					<div class="padding"></div>
+					<div class="padding"><span class="text-danger" th:errors="*{phoneNo}"
+							th:if="${#fields.hasErrors('phoneNo')}"></span></div>
 					<input class="form__button a mt-5" type="submit" value="Register" id="registerButton" />
 
 					<div class="padding"></div>
 					<div class="go_home">
-						<a  th:href="@{/}">Go Home</a>
+						<a th:href="@{/}">Go Home</a>
 					</div>
 				</div>
 			</form>
