--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,6 +16,9 @@
 	<nav th:replace="fragments/nav :: header">
 	</nav>
 	<!--Message Section!-->
+	<h4>Welcome, <span th:text="${#authentication.principal.email}"></span>!</h5>
+        
+   
 	<div class="text-success" th:if="${message}">
 		<h4>[[${message}]]</h4>
 	</div>
@@ -103,14 +106,18 @@
 										th:if="${book.bookType=='book' and book.is_available==false}"
 										>Already Lent</a>
 									</div>
-									<a class="text-decoration-none" sec:authorize="isAuthenticated()"
+									<a class="text-decoration-none" sec:authorize="hasRole('ROLE_USER')"
 										th:if="${book.bookType=='book' and book.is_available==true}"
 										th:href="@{/available/{id}(id=${book.bookId})}">Available</a>
+									<a class="text-decoration-none" sec:authorize="hasRole('ROLE_ADMIN')"
+										th:if="${book.bookType=='book' and book.is_available==true}"
+										>Available</a>
 									<a class="text-decoration-none" sec:authorize="hasRole('ROLE_ADMIN')"
 										th:if="${book.bookType=='book' and book.is_available==false}"
 										th:href="@{/lent/{id}(id=${book.bookId})}">Already Lent</a>
 									<a class="text-decoration-none" sec:authorize="hasRole('ROLE_USER')"
 										th:if="${book.bookType=='book' and book.is_available==false}">Already Lent</a>
+										
 									<a class="text-decoration-none" sec:authorize="isAuthenticated()"
 										th:unless="${book.bookType=='book'}"
 										th:href="@{/download(id=${book.bookId})}">Download</a>
@@ -123,6 +130,8 @@
 								<div class="text-center card-status p-2">
 									<a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/update(id=${book.bookId})}"
 										class="btn mr-2 mb-2 mb-md-0">Update</a>
+									<a sec:authorize="hasRole('ROLE_USER')" 
+										class="btn mr-2 mb-2 mb-md-0" th:text="${book.bookName}">Update</a>
 									<span sec:authorize="!isAuthenticated()" th:text="${book.bookName}"></span>
 								</div>
 							</div>
