--- a/src/main/resources/templates/updateBook.html
+++ b/src/main/resources/templates/updateBook.html
@@ -129,6 +129,21 @@
 								</td>
 								<!--Here-->
 							</tr>
+							<tr th:unless="*{bookType}==ebook">
+								<td>
+									<div id="pdflable" style="display: none;"
+										class="form-control-custom m-3 text-center">
+										Pdf
+									</div>
+								</td>
+								<td>
+									<div id="pdfinput" style="display: none;"  class="upload-btn-wrapper mt-2">
+										<button class="btn">Upload File...</button>
+										<input type="file" name="pdf" id="fileUpload" accept="application/pdf" />
+									</div>
+								</td>
+								<!--Here-->
+							</tr>
 						</tbody>
 					</table>
 					<div class="d-md-flex justify-content-md-around mt-5 mx-1">
