--- a/src/main/resources/templates/updateBook.html
+++ b/src/main/resources/templates/updateBook.html
@@ -15,12 +15,13 @@
 
 	<div class="container parent">
 		<div class="row">
-			<div class="col-md-2"></div>
-			<div class="d-flex col-md-4 justify-content-center mt-5">
+			<div class="col-md-1 col-0"></div>
+			<div class="d-flex col-md-3 justify-content-center mt-5">
 				<img th:src="@{/img/library.png}" alt="library" class="img-custom mt-5" />
 			</div>
-			<div class="col-md-4">
-				<p class="px-5 ml-md-5 m-3 fw-bold title-custom mt-4">Update Book</p>
+			<div class="col-md-1 col-0"></div>
+			<div class="col-md-7">
+				<div class="d-flex justify-content-start px-5 ml-md-5 m-3 fw-bold title-custom mt-4">Update Book</div>
 				<form th:action="@{/update}" th:object="${bookInfo}" method="post" enctype="multipart/form-data">
 					<table>
 						<tbody>
@@ -151,9 +152,9 @@
 							</tr>
 						</tbody>
 					</table>
-					<div class="d-md-flex justify-content-md-around mt-5 mx-1">
-						<input class="update-button mb-md-0 mb-3 mx-3" type="submit" value="Update Book" />
-						<input class="cancel-button" type="submit" value="Cancel" />
+					<div class="d-flex justify-content-start" style="margin-left: -20px;">
+						<input class="add-button" type="submit" value="Update Book" />
+						<input class="add-button cancle" type="submit" value="Cancel" />
 					</div>
 				</form>
 			</div>
